packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-default-cel-existing/chainsaw-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: update-automountserviceaccounttokens-default-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: update-automountserviceaccounttokens-default-other
