packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-default-cel-existing/chainsaw-test/sa-default-mutated.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: default
  namespace: update-automountserviceaccounttokens-default-2
automountServiceAccountToken: false
