packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-default-cel-existing/chainsaw-test/sa-default-other-unchanged.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: default
  namespace: update-automountserviceaccounttokens-default-other
(automountServiceAccountToken == null): true
